--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Class 3 Example</title>
+  <title>HW#3</title>
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
   <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.css' rel='stylesheet' />
@@ -13,7 +13,13 @@
 </head>
 
 <body>
-  hellooo
+  <div class='legend'>
+  <h4>GI Type</h4>
+  <div><span style='background-color: #778899'></span>Subsurface/Detention System</div>
+  <div><span style='background-color: #F2F12D'></span>Rooftop System</div>
+  <div><span style='background-color: #2E8B57'></span>Rain Gardens/Permeable Pavements</div>
+  <div><span style='background-color: #00FFFF'></span>Other GI Types</div>
+  </div>
   <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v0.53.1/mapbox-gl.js'></script>
 
   <!-- map div with inline styling -->
@@ -23,6 +29,11 @@
   src="https://code.jquery.com/jquery-3.3.1.min.js"
   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
+
+  <script src="js/gi-data.js"></script>
   <script src="js/scripts.js"></script>
+
+
+
 </body>
 </html>
