--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div class='legend' style='position: absolute; bottom: 30px; right: 10px; z-index:1'>
   <h4>This map shows green infrastructure (GI) projects in NYC excluding right-of-way projects.</h4>
-  <p>Click on a marker to show the GI type and its contributory waterbody.</p>
+  <p>Click on a marker to show the project name, GI type and its contributory waterbody.</p>
   </div>
 
 
